[B][COLOR red]Update - v3.7.1 - May 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Set tmdb to str() in tmdb module. This broke setting
    the new .setProperty('tmdb_id', tmdb). Can not be an int().[/I]

[B][COLOR red]Update - v3.7.0 - May 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Increased Find Similar list to 20 items vs. 10.[/I]
[COLOR yellow]--[/COLOR][I] Removed tagline for shows.[/I]
[COLOR yellow]--[/COLOR][I] Added missing clearlogo and clearart at season level.[/I]
[COLOR yellow]--[/COLOR][I] Unwatched count now only added to multi episode
    lists like Progress and Calendar.[/I]
[COLOR yellow]--[/COLOR][I] Added .setProperty(tmdb_id) for episodes and
    .setProperty(tvshow.tmdb_id) for shows for TMDBHelper
    support of lookup.[/I]
[COLOR yellow]--[/COLOR][I] Fixed bookmark issue mismatch in databse.[/I]

[B][COLOR red]Update - v3.6.9 - May 20, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added new source filtering option "File Size limit (GB)".
    This is off by default.[/I]
[COLOR yellow]--[/COLOR][I] Fixed random case of fetching foreign landscape
    from fanart.tv.[/I]

[B][COLOR red]Update - v3.6.8 - May 17, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed random issue with busy dialog not closing.[/I]
[COLOR yellow]--[/COLOR][I] Added database table check to avoid bogus log errors.[/I]
[COLOR yellow]--[/COLOR][I] Fixed issue if user cleared Provider cache and then
    selected Rescrape the table was now empty and halted scrapping.[/I]
[COLOR yellow]--[/COLOR][I] Because of the changes to item #2 and 3 above the
    setting option "Allow Rescrape to first clear item providers"
    has now been removed and hard coded as the default.[/I]

[B][COLOR red]Update - v3.6.7 - May 14, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Library .strm playback. Previous update added ability
    to compare meta received from tmdbhelper vs. Venom's
    cached meta and use the largest.  I neglected that .strm